--- a/src/scss/mixins/_typography.scss
+++ b/src/scss/mixins/_typography.scss
@@ -30,6 +30,9 @@
 @mixin paragraph() {
   font-size: 1em;
   line-height: 1.5em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   @include margin(0 null $space-small);
 }
 
